fixed positioning of scroll indicator on IE

--- a/_sass/_scroll_indicator.scss
+++ b/_sass/_scroll_indicator.scss
@@ -19,9 +19,11 @@
   color: $color-white;
   font-size: 3em;
   height: 3rem;
+  left: 50%;
   overflow: hidden;
   padding-top: 1rem;
   position: absolute;
+  transform: translateX(-50%);
   text-decoration: none;
   width: 100%;
 
